--- a/app/client/main.html
+++ b/app/client/main.html
@@ -5,6 +5,6 @@
   <title>meteor-application-template-react</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body class="h-100">
+  <div id="root" class="d-flex flex-column h-100"></div>
 </body>
